- Theme reactor: Deleted duplicated favicon (Trello #1419)
- Themes reactor-primaria-1 and reactor-serveis-educatius: Added field email to Fitxa del Centre and modified behaviour of links for contact and map (Trello #1459)
- Themes reactor-primaria-1 and reactor-serveis-educatius: Added id attribute to site logo (Trello #1477)


Changes 16.10.24
---------------------------------------------------------------------------------------
- GCE: Prevent grouped calendars to belong to categories used to create that calendars (Trello #1371)
- GCE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
- Dashboard: Reviewed access to menu options in dashboard for roles xtec_teacher and contributor (Trello #1354)
- wordpress-importer: Upgraded plugin from 0.6.1 to 0.6.3
- agora-functions: Translated text to english and added translation to .po file (Trello #1394)
- mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
- mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
- mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
- xtec-stats: Fixed Javascript error in Safari in statistics page (Trello #1361)
- xtec-booking: Fixed size image in modal window with the booking details (Trello #1399)
- xtec-booking: Fixed styles in day view (Trello #1399)
- buddypress-docs: Tag searches use 'and' as a default condition. Changed text link accordingly (Trello #1368)
- add-to-any: Upgraded plugin from 1.6.17 to 1.7 (Trello #1283)
- buddypress: Corrected translation in register page (Trello #1382)
- buddypress: Removed submenu Appearance | Emails (Trello #1301)
- Role of xtecadmin cannot be changed (Trello #1390)


Changes 16.09.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.4 (Trello #1345)