@@ -866,77 +866,6 @@ ul.bbp-topics, .bbp-topic-form {
     clear: inherit !important;
 }
 
-/* Calendari */
-
-.gce-widget-grid .gce-calendar td {
-    background-color: #efefef;
-    border: 0.1em solid white !important;
-    color: #55556a !important;
-}
-
-.gce-widget-grid .gce-calendar td.gce-day-future,
-.gce-widget-grid .gce-calendar td.gce-day-past {
-    color: #55556a !important;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 0.8em;
-    background-color: #e7e7e7;
-    border: 0.1em solid white !important;
-}
-
-.gce-widget-grid .gce-calendar th {
-    border: 0 !important;
-}
-
-.gce-widget-grid .gce-calendar {
-    border: 0 !important;
-}
-
-.gce-widget-grid .gce-calendar .gce-caption {
-    background-color: #e7e7e7;
-    color: #55556a;
-    text-transform: capitalize;
-    padding-top: 0.3em;
-}
-
-.gce-has-events {
-    background-color: #cfcfcf !important;
-    font-weight: bold;
-}
-
-.gce-widget-grid {
-    padding-right: 1em;
-}
-
-.gce-today span.gce-day-number {
-    border-radius: 75%;
-    padding: 5px;
-}
-
-div.gce-widget-grid table tr th,
-div.gce-widget-grid table tr td {
-    padding: 0.5em 0.25em;
-}
-
-.gce-prev .gce-change-month {
-    padding-left: 10px;
-}
-
-div.gce-next .gce-change-month {
-    padding-right: 10px;
-}
-
-.gce-prev .gce-change-month-list:after {
-    content: "Anterior";
-}
-
-div.gce-next .gce-change-month-list:before {
-    content: "Següent";
-}
-
-.gce-widget-list {
-    margin-bottom: 1.5em;
-}
-
 /* Pagination */
 
 ul.pagination {
